# Socratic-conflict

./: .coverage  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  PRODUCTION.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFLICT_DETECTION.md  FAQ_BY_SCENARIO.md  GUIDES_BY_ROLE.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md
examples/: 01_tech_stack_conflict.py  02_requirements_conflict.py  03_goals_conflict.py  04_constraints_conflict.py
src/socratic_conflict/: __init__.py  async_detector.py  base.py  checkers.py  detector.py  exceptions.py  models.py  resolver.py  rules.py
src/socratic_conflict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/socratic_conflict/consensus/: algorithms.py
src/socratic_conflict/core/: conflict.py
src/socratic_conflict/detection/: detector.py
src/socratic_conflict/history/: tracker.py
src/socratic_conflict/integrations/: __init__.py
src/socratic_conflict/integrations/langchain/: __init__.py  tool.py
src/socratic_conflict/integrations/openclaw/: __init__.py  skill.py
src/socratic_conflict/resolution/: __init__.py  ml_resolver.py  strategies.py
tests/: test_module_imports.py
tests/integration/: __init__.py  test_langchain.py  test_openclaw.py
tests/unit/: test_async_detector.py  test_consensus.py  test_core.py  test_detection.py  test_history_tracker.py  test_module_imports.py  test_resolution.py
